--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ repositories {
 }
 
 dependencies {
+    runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
+            'io.jsonwebtoken:jjwt-jackson:0.11.1'
+    compile('io.jsonwebtoken:jjwt-api:0.11.1')
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
