--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
             'io.jsonwebtoken:jjwt-jackson:0.11.1'
     compile('io.jsonwebtoken:jjwt-api:0.11.1')
