--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ repositories {
 }
 
 dependencies {
+    implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.228')
+    implementation 'com.amazonaws:aws-java-sdk-s3'
     compile group: 'commons-codec', name: 'commons-codec', version: '1.10'
     runtime 'io.jsonwebtoken:jjwt-impl:0.11.1',
             'io.jsonwebtoken:jjwt-jackson:0.11.1'
