--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+cloud.aws.s3.bucket= my-diary-domain
+cloud.aws.region.static= ap-northeast-2
+cloud.aws.stack.auto=false
 spring.profiles.include=aws
