--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.servlet.multipart.max-request-size=10MB
 cloud.aws.s3.bucket= my-diary-domain
 cloud.aws.region.static= ap-northeast-2
 cloud.aws.stack.auto=false
+cloud.aws.credentials.instanceProfile= true
 spring.profiles.include=aws
